--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-    
+    <header>
+        <h1>Auto Repair Shop</h1>
+        <input type="text" id="search-bar" placeholder="search services...">
+
+    </header>
+    <main>
+        <section id="service container"></section>
+        <section id ="form container"></section>
+        <section id="review container"></section>
+    </main>
+    <script src="script.js"></script>
 </body>
 </html>
